[package]
name = "weather"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
colored = "2.1.0"
num-format = "0.4.4"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.213", features = ["derive"] }
tokio = { version = "1.41.0", features = ["full"] }
